<resources>
    <string name="app_name">Perfil Do Investidor</string>
    <string name="txtExplic">O Banco Paulista, em atendimento às exigências regulatórias, elaborou o Questionário API com objetivo de auxiliá-lo a identificar seu perfil de investidor (conservador, moderado ou arrojado) e recomendar os investimentos mais alinhados a esse perfil. Para cada questão, escolha a alternativa que mais se aproxima dos seus objetivos e expectativas de investimento.\n\n
    *aplicativo para fins acadêmicos</string>
    <string name="txtTitulo">Analisador de Perfil de Investimento</string>
    <string name="txtInformar">Informe seu nome:</string>
    <string name="Nome">nome</string>
    <string name="next">Começar Avaliação</string>
    <string name="nome_do_usu_rio">Nome do Usuário</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar">Clique em iniciar para começar a avaliação</string>
    <string name="nome">Nome:</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="perfil">Perfil:</string>
    <string name="logo_banco">Logo_Banco</string>
</resources>
